@@ -3,14 +3,16 @@ Hash: SHA256
 
 DIST sanitize-2.0.6.tar.gz 78888 SHA256 ecc0526f231d68dd88efd957145f79841f446ba36124e28c91ef275cc88cafb8 SHA512 e086d6963e8506d498266f0642dd70a9151f38760c1cac69cbba08cde9af291989be48770062dfe824be87f59b21f3d8c125579d9db227f8edea0f93a0993893 WHIRLPOOL 6742f6c06f7b1fc750c76c440e6ed6fd0ee384c6b8afefe0cf064d7c4283e4d877ae9347d7fd392cb1cbfc44798d93d0915059d77aacabf3938ec54ed4491d8e
 DIST sanitize-2.1.0.gem 20992 SHA256 c3be075f5b38a1b02404be5778b181e50fba9ab253bac851cb217d9a71375b77 SHA512 29a26e37342a75af2bc7795578edf2c5064263c58d38dfc36e18f1e111271616c026f7d808a05d63185c12f0e52384db84d62bdb796bf1b21d7e902ef0c1d096 WHIRLPOOL f07c3f7c3550b1e47e3189838a8c1c30c7cd856f237dde167516f25e86520fffe7357f87efd4f2fcf03230650fa55da0ff2d7870746c72c9897318f6dc935cc6
+DIST sanitize-4.0.0.gem 38912 SHA256 56445c9c609e98e855902d0be6c76a687a2987c698f56a983feedd1d8b46676a SHA512 a811cbbf58be81c682b510d0e45aa8c5adf2781fa8001b1b17b5856c859baa6b0fc885bfe26b05d4a61e1889616ec700c5693a761cb7e0df5cab2066224aa874 WHIRLPOOL d9e42c6a3676034f56108d04477de784b0af64c607ed8de28cc264d2ac76c908b23bcbd3542c7d5311f59afb6d76e1d08c93730534a87e96057b3e00a0dfdb58
 EBUILD sanitize-2.0.6-r1.ebuild 858 SHA256 8630126db5970a6d40a02fcca0aac7350ea7315b275ca769f4528a68227dc5d7 SHA512 108f9da5fcb0e01bea0c888306f03341efae1dfdfb3535e023b70ce1169b7d844f73503382fd8147e29c7209403e2ee8a1b2fe3471f3948c13bd514f89e2d76d WHIRLPOOL fd13fbd2e864ebde3b58f1bc6da5a40185daee02efaf0d80af45c056221053d7a5c7ee110d290fb73c7763064f04b722088ae13bce1dc89244f87a86168fd64d
 EBUILD sanitize-2.1.0.ebuild 703 SHA256 c8cdade760f1b6c1c1bebbdf27ab0f4cbd437df136039fe361b8925657f53b1b SHA512 38fb2598fbf951ca0f121b305f0573e040fcc0383df91b6fb657d1f8024dae4df1c49cceae10657583c808674b4c8e0192cc96548d568d12cbbab227bb871188 WHIRLPOOL af4a8750bb28e65d3ab5dc940bec04d0672c9de5c37712ca7bd8afb98279e36faea87e75ee2f035ada9d4f992c7fa4ceb0559a07d451fbf97ea967821fde4316
-MISC ChangeLog 915 SHA256 95cb90314045adb5e91f070627677cd02036d4f3a7c1172679be8b27414c44df SHA512 872d688f1e6deda9d9c30f583f9db6e117bbe173c08cd4cfd5748e1aacc20c6d0527f85575696c5faacde0475b27aadc08f8c4b37f7ea3e9f913488a945c97f3 WHIRLPOOL b100c19d6e4baa8f2f388baa9e7604d88de3155c24e0d4774be7814e7e7f015445539ec3079bfc0f7fd71e9c74b494a2a6903ced6ca09011211cdcd5f1068cd3
+EBUILD sanitize-4.0.0.ebuild 761 SHA256 b6195f5b2d0881c0ee802adb18c8bd429174f6c4629aeb156de376cb030534e8 SHA512 ea9ae689da32509862064805c15a94fc5baef893ea210d2eeb606e98ba7d1e40585181d28b9af648dc01c698b239c363323c2b22aa74f9f5e502093e9f841fa4 WHIRLPOOL 4774036baf8e3ac1f7c825dc487d5f57f88c76cd24ea6c8bf2fbf1972a1d13094c21aca9ffc9ca591177980c4418dc87f3775e9758e2cb738abe07d430f6e1ce
+MISC ChangeLog 1091 SHA256 e4310b2f47fa46bbb35a81f7279016cee847cf1d693f9420fd1c5019a8df0991 SHA512 c2e3350383bbc5f4d3abbac79184ace093902d826d62e65e8dfa332cecdb0586aebbdf1ae45d8adeb94b5492b87dd095777785955ec65ede99cd30ae74c0d0a2 WHIRLPOOL 1599533f7bb8b021c45b38c4a45ff5ec3fc514e15c8f5a9ed66788a952018ffe9d8f275c5ed805f44e98dadb6727cc21af32529ae45ba25a476f1708cfa58a69
 MISC metadata.xml 157 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c SHA512 0cec73b966de88015ea4c7212723d848d367608aa93658bb945f298a8000c4ba8aba73c9eb8481859fb5bbed45e80dae32c628caf81e027a4ad8eafa7e632851 WHIRLPOOL 4da25c81e21173ad8b7b5f35b056264869d9a16741062aa4422c5ea1aa9e73da8eb700b0d54de84c169d702fbb3f41ed157c9dc7c9daac110849ae84715c051b
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iF4EAREIAAYFAlUTGWYACgkQiIP6VqMIqNc+YAEAhKRS+et0/QuRHeiyPM1pHqDl
-LTSNsCkjUTW4//tXk7MBAJVfnJXsK8n7E9NiO40HcE4REwpm57kcaFxzg9ydNNb+
-=B6eC
+iF4EAREIAAYFAlVYW88ACgkQiIP6VqMIqNcBMgD/dQplxpt4lZUamW8JpCO5ArLq
+s1+tlwHPDdqBAct0g2gA/0eZVPNHHxDcL66Bt/kVCh2xrX1NNvsFjLIWkbqSkXtN
+=UOGQ
 -----END PGP SIGNATURE-----
